v3.5.9.3 --fix:修复了群组不能正确查询的bug